# focus-assistant

./: .prettierrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts.timestamp-1692729902334-fc930821eb01.mjs
.github/workflows/: publish.yml
src/: entry-server.tsx  manifest.ts  root.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  focus.rs  http.rs  main.rs  timer.rs
src-tauri/src/focus/: commands.rs  mod.rs
src-tauri/src/http/: add_website.rs  can_access_website.rs  mod.rs
src-tauri/src/minimizer/: macos.rs  mod.rs  windows.rs
src-tauri/src/util/: mod.rs  pids.rs  processes.rs  remove_item.rs
src/bindings/: app.ts  focus.ts  timer.ts  window.ts
src/components/: TimerSlider.tsx
src/components/allowlist/: AllowList.tsx  AllowedApps.tsx  AllowedWebsites.tsx  DeleteModal.tsx
src/components/button/: Button.css  Button.tsx  IconButton.tsx
src/components/input/: SwitchButton.tsx
src/components/modal/: Modal.css  Modal.tsx
src/components/sidebar/: Sidebar.tsx  SidebarItem.tsx  SidebarTitle.tsx  sidebar.css
src/components/titlebars/: TitleBar.css  TitleBar.tsx  TitleBarButton.tsx
src/components/typography/: Header.tsx  Text.tsx
src/pages/background/: index.ts
src/pages/content/: focus.tsx  index.tsx
src/routes/: blocks.tsx  index.tsx  settings.tsx
src/styles/: index.css
src/util/: createPersistedStore.ts  options.ts  preferences.ts  timer.ts  util.ts
src/utils/: commands.ts  extension-utils.ts
utils/plugins/: make-manifest.ts
(+8 files in other folders)
