[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Revxrsal"]
license = "MIT"
repository = "https://github.com/Revxrsal/focus-assistant"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.20"
parking_lot = "0.12.1"
once_cell = "1.18.0"

[dependencies.tauri]
version = "1.4.0"
features = [
    "window-set-fullscreen",
    "window-start-dragging",
    "window-show",
    "window-minimize",
    "window-hide",
    "window-maximize",
    "window-unminimize",
    "window-unmaximize",
    "window-close",
    "notification-all",
    "dialog-open"
]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef",
    "winuser",
    "windef",
    "tlhelp32",
    "processthreadsapi",
    "psapi"
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
